# anime-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.toml
server/: config.py  main.py
server/routers/: __init__.py
server/routers/v1/: __init__.py  animes.py
server/routes/: __init__.py
server/routes/v1/: __init__.py  animes.py
server/schemas/: animes.py  staff.py
