[tool.poetry]
name = "anime-api"
version = "0.1.0"
description = ""
authors = ["John Silver"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "0.14.0"
dynaconf = "^3.1.7"
pymongo = "^3.12.1"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
