[tool.poetry]
name = "anime-api"
version = "0.1.0"
description = ""
authors = ["John Silver"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.110.1"
uvicorn = "~0.29.0"
dynaconf = "^3.1.7"
pydantic = "~2.7.0"
pydantic-settings = "~2.2.1"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
